<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Tab3">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/background" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="205dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="45dp"
                    android:paddingLeft="20dp"
                    android:text="@string/judul1"
                    android:textColor="@color/white"
                    android:textSize="19dp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="205dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="85dp"
                    android:paddingLeft="20dp"
                    android:text="@string/judul2"
                    android:textColor="#FFEB3B"
                    android:textSize="15dp"
                    android:fontFamily="sans-serif"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/img_22"
                    android:layout_marginTop="150dp"/>

            </FrameLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judulti1"
            android:paddingTop="30dp"
            android:paddingBottom="20dp"
            android:textSize="25dp"
            android:textColor="#3F51B5"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/isiti1"
            android:textSize="12dp"
            android:textAlignment="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="sans-serif"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judulti2"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:textSize="18dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="#000000"
            android:fontFamily="sans-serif"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/isiti2"
            android:textSize="12dp"
            android:textAlignment="viewStart"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="sans-serif"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judulti3"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:textSize="18dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="#000000"
            android:fontFamily="sans-serif"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/isiti3"
            android:textSize="12dp"
            android:textAlignment="viewStart"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="sans-serif"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judulti4"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:textSize="18dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="#000000"
            android:fontFamily="sans-serif"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/isiti4"
            android:textSize="12dp"
            android:textAlignment="viewStart"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="sans-serif"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judulti5"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:textSize="18dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="#000000"
            android:fontFamily="sans-serif"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/isiti5"
            android:textSize="12dp"
            android:textAlignment="viewStart"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="sans-serif"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judulti6"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:textSize="18dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="#000000"
            android:fontFamily="sans-serif"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/isiti6"
            android:textSize="12dp"
            android:textAlignment="viewStart"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="sans-serif"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judulti7"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:textSize="18dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="#000000"
            android:fontFamily="sans-serif"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/isiti7"
            android:textSize="12dp"
            android:textAlignment="viewStart"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="sans-serif"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judulti8"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:textSize="18dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="#000000"
            android:fontFamily="sans-serif"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_marginBottom="30dp"
            android:text="@string/isiti8"
            android:textSize="12dp"
            android:textAlignment="viewStart"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="sans-serif"/>

    </LinearLayout>

</ScrollView>