<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Tab2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/background" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="205dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="45dp"
                    android:paddingLeft="20dp"
                    android:text="@string/judul1"
                    android:textColor="@color/white"
                    android:textSize="19dp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="205dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="85dp"
                    android:paddingLeft="20dp"
                    android:text="@string/judul2"
                    android:textColor="#FFEB3B"
                    android:textSize="15dp"
                    android:fontFamily="sans-serif"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/img_22"
                    android:layout_marginTop="150dp"/>
            </FrameLayout>
        </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="153dp"
                android:layout_gravity="center"
                android:scaleType="fitStart"
                android:layout_margin="5dp"
                android:src="@drawable/img_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="16dp"
                android:lineSpacingMultiplier="1"
                android:text="@string/value1"
                android:textSize="32sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="20dp"
                android:lineSpacingMultiplier="1"
                android:text="@string/value2"
                android:textSize="15sp" />
            <Button
                android:id="@+id/button1"
                android:layout_marginBottom="70dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="#f0eee4"
                android:text="@string/value101"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="153dp"
                android:layout_gravity="center"
                android:scaleType="fitStart"
                android:layout_margin="5dp"
                android:src="@drawable/img_2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="16dp"
                android:lineSpacingMultiplier="1"
                android:text="@string/value21"
                android:textSize="32sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="20dp"
                android:lineSpacingMultiplier="1"
                android:text="@string/value22"
                android:textSize="15sp" />
            <Button
                android:id="@+id/button2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                android:background="#f0eee4"
                android:text="@string/value101"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="153dp"
                android:layout_gravity="center"
                android:scaleType="fitStart"
                android:layout_margin="5dp"
                android:src="@drawable/img_3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="16dp"
                android:lineSpacingMultiplier="1"
                android:text="@string/value31"
                android:textSize="32sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="20dp"
                android:lineSpacingMultiplier="1"
                android:text="@string/value32"
                android:textSize="15sp" />
            <Button
                android:id="@+id/button3"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                android:background="#f0eee4"
                android:text="@string/value101"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="153dp"
                android:layout_gravity="center"
                android:scaleType="fitStart"
                android:layout_margin="5dp"
                android:src="@drawable/img_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="16dp"
                android:lineSpacingMultiplier="1"
                android:text="@string/value41"
                android:textSize="32sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="20dp"
                android:lineSpacingMultiplier="1"
                android:text="@string/value42"
                android:textSize="15sp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                android:background="#f0eee4"
                android:text="@string/value101"/>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="153dp"
                android:layout_gravity="center"
                android:scaleType="fitStart"
                android:layout_margin="5dp"
                android:src="@drawable/img_5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="16dp"
                android:lineSpacingMultiplier="1"
                android:text="@string/value51"
                android:textSize="32sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="20dp"
                android:lineSpacingMultiplier="1"
                android:text="@string/value52"
                android:textSize="15sp" />
            <Button
                android:id="@+id/button5"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                android:background="#f0eee4"
                android:text="@string/value101"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="16dp"
                android:lineSpacingMultiplier="1"
                android:fontFamily="times"
                android:textStyle="bold"
                android:text="@string/value01"
                android:textSize="32sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="20dp"
                android:lineSpacingMultiplier="1"
                android:text="@string/value02"
                android:textSize="17sp" />

        </LinearLayout>

    </ScrollView>
